--- a/StarWars.html
+++ b/StarWars.html
@@ -81,8 +81,8 @@
     </div>
     <div class="cards">
       
-      <div class=" star2 move4">
-        <img src="images/star-destroyer-star-wars-tie-fighter-starship-star-war-removebg-preview.png" alt="" >
+      <div class="move4" style=" bottom:-1800px; position: absolute; ">
+        <img src="images/star-destroyer-star-wars-tie-fighter-starship-star-war-removebg-preview.png" width="400px" height="140px">
       </div>
       
       <div class="card">
